update web version

--- a/static/blackjack.html
+++ b/static/blackjack.html
@@ -19,7 +19,7 @@
                 <select id="deck">
                     <option value="static/assets/stdcards/" selected>Default Cards</option>
                     <option value="static/assets/progcards/">Programming Cards</option>
-                    <option value="static/assets/gruvcards/">Gruvbox Cards (beta i guess)</option>
+                    <!--<option value="static/assets/gruvcards/">Gruvbox Cards (beta i guess)</option>-->
                 </select><br><br>
                 <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
             </div>
