--- a/static/main.html
+++ b/static/main.html
@@ -47,6 +47,18 @@
                                 </optgroup>
                             </select>
                         </fieldset><br>
+                        <fieldset>
+                            <label>Preloaded notes handled</label><br><input type="tel" name="auto_preload" style="width: 60vw;">
+                        </fieldset>
+                        <fieldset>
+                            <label>Wing notes handled</label><br><input type="tel" name="auto_wing" style="width: 60vw;">
+                        </fieldset>
+                        <fieldset>
+                            <label>Neutral zone notes handled</label><br><input type="tel" name="auto_neutral" style="width: 60vw;">
+                        </fieldset>
+                        <fieldset>
+                            <label>Scores</label><br><input type="tel" name="auto_scores" style="width: 60vw;">
+                        </fieldset>
                     </div>
                     <button type="button" class="continue_button" disabled><h2>continue</h2></button>
                 </div>
