--- a/static/settings.html
+++ b/static/settings.html
@@ -12,6 +12,7 @@
     </head>
     <body class="dark-mode centerText">
         <script>themeHandle()</script>
+        <script>
         <div class="container">
             <div class="dummy" style="min-width: 250px;">
                 <h1 class="w3">bearTracks<br><span class="gametitle">settings</span></h1>
