--- a/static/create.html
+++ b/static/create.html
@@ -14,7 +14,7 @@
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">REEFSCAPE</span></h1>
                 <form>
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2><h4 style="color: var(--cancelColor); display: none;" id="error"></h4><input type="hidden" name="access">
                     <label for="access">Team Join Code</label><br><small>00000 for no team</small><br><div class="joinCodeBox"><input id="cB0" type="number" kind="join" maxlength="1"/><input id="cB1" type="number" kind="join" maxlength="1"/><input id="cB2" type="number" kind="join" maxlength="1"/><input id="cB3" type="number" kind="join" maxlength="1"/><input id="cB4" type="number" kind="join" maxlength="1"/></div><br><br>
