--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="offlineAlert" id="offlineAlert" style="display: none"><span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline</div>
             <div>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">REEFSCAPE</span></h1>
                 <div style="display: flex; flex-direction: column;">
                     <div style="order: 0"><a style="order: 0" class="gameflair1" href="main">scout</a>
                     <div style="order: 1"></div><a style="order: 1" class="gameflair1" href="scouts">ranks</a>
