--- a/static/main.html
+++ b/static/main.html
@@ -76,9 +76,11 @@
                             </div>
                         </div>
                         <div class="HStack">
-                            <button class="cycle_button" type="button"><h1>speaker</h1></button>
-                            <button class="cycle_button" type="button"><h1>amplifier</h1></button>
-                            <button class="cycle_button" type="button" style="min-width: 10vw; color: #fe8019; margin: none;"><h2>other</h2></button>
+                            <button class="cycle_button" type="button" style="min-width: 10vw;"><h2>Algae</h2></button>
+                            <button class="cycle_button" type="button" style="min-width: 10vw;"><h2>L1</h2></button>
+                            <button class="cycle_button" type="button" style="min-width: 10vw;"><h2>L2</h2></button>
+                            <button class="cycle_button" type="button" style="min-width: 10vw;"><h2>L3</h2></button>
+                            <button class="cycle_button" type="button" style="min-width: 10vw;"><h2>L4</h2></button>
                         </div>
                         <button type="button" class="continue_button"><h2>continue</h2></button>
                     </div>
@@ -98,7 +100,7 @@
                     <div class="HStack">
                         <p style="width: 9em; margin-top: 5px; text-align: left;">Deep Cage</p>
                         <div style="width: calc(80vw - 9em - 46px);"></div>
-                        <label class="ios-switch"><input type="checkbox" name=""><i>deep_cage</i></label>
+                        <label class="ios-switch"><input type="checkbox" name="deep_cage"><i></i></label>
                     </div>
                     <div class="VStack" style="align-items: baseline; margin: 1%; width: 80vw;">
                         <label style="text-align: left;">Did the robot play defense? If so, was it effective? Did it incur foul points?</label>
