Fix "CRESCENDO" titles

--- a/static/main.html
+++ b/static/main.html
@@ -23,7 +23,7 @@
         <script>themeHandle()</script>
         <form id="form_content" style="display: block; width: 100vw;">
                 <div class="VStack form_pages" style="align-items: center; display: flex;">
-                    <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
+                    <h1 class="w3">bearTracks<br><span class="gametitle">REEFSCAPE</span></h1>
                     <div class="VStack" style="width: 80vw; align-items: baseline;">
                         <fieldset>
                             <label>Event Code&emsp;<span id="selected_event_code">XXXX</span>&emsp;<span><a style="all: unset; color: #0a84ff;" href="/settings">change</a></span></label>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="VStack form_pages" style="align-items: center; display: none;">
-                    <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
+                    <h1 class="w3">bearTracks<br><span class="gametitle">REEFSCAPE</span></h1>
                     <div class="HStack">
                         <p style="width: 9em; margin-top: 5px; text-align: left;">Park</p>
                         <div style="width: calc(80vw - 9em - 46px);"></div>
