--- a/static/pit.html
+++ b/static/pit.html
@@ -33,11 +33,11 @@
                 </div>
                 <div class="VStack form_pages" style="align-items: center; display: none;">
                     <h3 id="eventCodeDisplay"></h3><br>
-                    <div id="insertHere"></div>
+                    <table><tr id="preInsert"><th>&emsp;Matches&emsp;</th></tr></table><br>
                     <button type="button" class="uiButton returnButton" onclick="history.back()">Back</button><br><br>
                 </div>
             </div>
         </div>
-        <script type="module" src="../static/js/data_detail/data_detail.min.js"></script>
+        <script type="module" src="../static/js/data_team/data_detail.min.js"></script>
     </body>
 </html>
