Web versions, APN support start

--- a/static/team.html
+++ b/static/team.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="VStack form_pages" style="align-items: center; display: none;">
                     <h3 id="eventCodeDisplay"></h3><br>
-                    <button type="button" class="actLink">Pit Data →</button><br>
+                    <!--<button type="button" class="actLink">Pit Data →</button>--><br>
                     <table><tr id="preInsert"><th>&emsp;Matches&emsp;</th></tr></table><br>
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/data'">Back</button>
                 </div>
