fix some things

--- a/static/scouts.html
+++ b/static/scouts.html
@@ -18,7 +18,7 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">scouts</span></h1>
                 <h3 id="eventCodeDisplay"></h3><table><tr id="preInsert"><th>Scout Name</th><th>Score</th></tr></table><br>
                 <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button>
-                <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button><br><br>
             </div>
         </div>
         <script type="module" src="static/js/scouts/scouts.min.js"></script>
