fix some web things

--- a/static/pointRecords.html
+++ b/static/pointRecords.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="static/css/table.min.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getPointsData()">
+    <body class="gruvbox" onload="getPointsData()">
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
