--- a/static/points.html
+++ b/static/points.html
@@ -10,7 +10,7 @@
         <style>a,a:visited {text-align:center;text-decoration:none;font-size:6vh;}a:hover,a:active{color:var(--textColor);}</style>
         <script src="static/js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText">
+    <body class="gruvbox centerText">
         <script>themeHandle()</script>
         <div class="container">
             <div>
