--- a/static/create.html
+++ b/static/create.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="static/css/create.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText">
+    <body class="gruvbox centerText">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
