Pull requesets are for the weak 3

--- a/static/main.html
+++ b/static/main.html
@@ -129,6 +129,6 @@
             <image src="static/assets/checkmark.seal.fill.png" style="display: none; width: 150px" id="success_seal"></image>
             <image src="static/assets/xmark.seal.fill.png" style="display: none; width: 150px" id="failure_seal"></image>
         </div>
-        <script type="module" src="static/js/main/main.min.js"></script>
+        <script type="module" src="static/js/main/main.min.js?v=612003"></script>
     </body>
 </html>
